[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sre-incident-env"
version = "1.0.0"
description = "Live SRE Incident Response Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "httpx",
    "openenv-core"
]

[project.scripts]
server = "app:main"