[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sre-incident-env"
version = "5.0.0"
description = "KubeSRE — Production-grade SRE Incident Response environment for evaluating agentic reasoning under cascading Kubernetes failures."
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "httpx",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
